# agentic-rag-regcopilot

./: .gitignore  README.md  pyproject.toml
app/: api.py  config.py  graph.py  models.py  typing.py  ui.py  utils.py
app/agents/: answerer.py  critic.py  planner.py  repair.py  retriever.py
app/ingest/: ingest.py  loaders.py
app/retrievers/: hybrid_rrf.py
data/sample/: README.txt  cross_border_transfer_code_2023.html  dpia_guideline_2023.html  payments_kyc_rules_2022.html  privacy_act_2024.html  regulator_faq_consent.html
evals/: ragas_suite.py
